--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <a class="nav-link active" href="#day-4" role="tab" data-bs-toggle="tab">SÁBADO 20 DE ABRIL</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#day-5" role="tab" data-bs-toggle="tab">VIERNES 26 DE ABRIL</a>
+        <a class="nav-link" href="#day-5" role="tab" data-bs-toggle="tab"> 26 DE ABRIL</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#day-6" role="tab" data-bs-toggle="tab">SÁBADO 27 DE ABRIL 2024</a>
@@ -219,9 +219,9 @@
 <!-- End Schedule Day SÁBADO 20 DE ABRIL -->
 
 
-      <!-- Schedule Day VIERNES 26 DE ABRIL -->
+      <!-- Schedule Day  26 DE ABRIL -->
 <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-5">
-  <!-- Eventos del VIERNES 26 DE ABRIL -->
+  <!-- Eventos del  26 DE ABRIL -->
   <div class="row schedule-item">
     <div class="col-md-2"><time>08:30 AM</time></div>
     <div class="col-md-10">
@@ -263,13 +263,45 @@
 <!-- End Schedule Day VIERNES 26 DE ABRIL -->
 
 
-      <!-- Contenido del día SÁBADO 27 DE ABRIL 2024 -->
-      <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-6">
-        <!-- Eventos del SÁBADO 27 DE ABRIL 2024 -->
-        <div class="row schedule-item">
-          <!-- Aquí van los eventos del Sábado 27 de Abril 2024 -->
-        </div>
-      </div>
+<!-- Schedule Day SÁBADO 27 DE ABRIL 2024 -->
+<div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-6">
+  <!-- Eventos del SÁBADO 27 DE ABRIL 2024 -->
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>09:00 AM</time></div>
+    <div class="col-md-10">
+      <h4>El láser - uso médico-quirúrgico y terapéutico en intervenciones dermoestéticas <span>Dra. Pilar Martín</span></h4>
+      <p>Aplicación en Atenuación de cicatrices, Lifting facial, Rejuvenecimiento vaginal, Tratamiento de hemangiomas, Telangiectasias, Verrugas.</p>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>11:30 AM</time></div>
+    <div class="col-md-10">
+      <h4>Pausa</h4>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>12:00 PM</time></div>
+    <div class="col-md-10">
+      <h4>Prácticas preclínicas <span>Dra. Pilar Martín y Dra. Flor Arriaga</span></h4>
+      <p>Láseres terapéuticos (diodo) 560nm, 658nm, 660nm, 810nm, 940nm, 980nm.</p>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>01:30 PM</time></div>
+    <div class="col-md-10">
+      <h4>Comida</h4>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>02:30 PM</time></div>
+    <div class="col-md-10">
+      <h4>Prácticas continuación <span>Dra. Pilar Martín y Dra. Flor Arriaga</span></h4>
+      <p>Láser Quirúrgicos (Erbio:YAG (2940nm, 1645nm), Er:Cr/YSGG (2780nm), CO2 (10,000nm).</p>
+    </div>
+  </div>
+</div>
+<!-- End Schedule Day SÁBADO 27 DE ABRIL 2024 -->
+
     </div>
   </div>
 </section>
