--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <a class="nav-link active" href="#day-4" role="tab" data-bs-toggle="tab">SÁBADO 20 DE ABRIL</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#day-5" role="tab" data-bs-toggle="tab"> 26 DE ABRIL</a>
+        <a class="nav-link" href="#day-5" role="tab" data-bs-toggle="tab"> VIERNES 26 DE ABRIL</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#day-6" role="tab" data-bs-toggle="tab">SÁBADO 27 DE ABRIL 2024</a>
