--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <div class="container position-relative" data-aos="fade-up">
     <div class="row">
       <div class="col-lg-6">
-        <h2>Acerca de nosotros</h2>
+        <h2>Acerca del curso</h2>
         <p>Este curso devela un amplio espectro de uso en la práctica diaria de diferentes sistemas de láser, desde la dermatología hasta la oncología, donde las ventajas de trabajo a nivel celular nos facilita cada momento de nuestro día a día, ayudándonos a tomar decisiones científicamente cimentadas.</p>
         <p>En la investigación podremos adquirir la información para ser autocríticos en la extensa literatura que existe en esta área para poder seguir aumentando nuestro conocimiento.</p>
       </div>
