--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
       &copy; Derechos de Autor <strong>Laser en Medicina</strong>
     </div>
     <div class="social-links text-center text-md-right pt-3 pt-md-0">
-      Diseñado por <a href="https://bootstrapmade.com/" class="twitter"><i class="bx bxl-twitter"></i></a>
+      <a href="https://bootstrapmade.com/" class="twitter"><i class="bx bxl-twitter"></i></a>
       <div class="credits">
         <!--
         All the links in the footer should remain intact.
