--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
     <h1 class="mb-4 pb-0">INTRODUCCIÓN AL LÁSER MÉDICO QUIRÚRGICO<br><span>COMO</span> DISCIPLINA INTEGRAL Y MULTIDISCIPLINARIA</h1>
     <p class="mb-4 pb-0">PUEBLA 26-27 DE ABRIL 2024</p>
-    <p class="mb-4 pb-0">Hospital MC Puebla</p>
+    <p class="mb-4 pb-0">Hospital MAC Puebla</p>
     <p class="mb-4 pb-0">Instructores: Dra. María Pilar Martín Santiago, Dr. Pedro A. Martínez-Carpio</p>
     <p class="mb-4 pb-0">Organizadores: Dra. Flor Arriaga Lila, Dra. Maribel Sosa Nieves, Marc Cuellar Roehri, MSc.</p>
     <a href="#about" class="about-btn scrollto">Acerca del evento</a>
