--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
           <h6 class="card-price text-center">Costo normal: $10,000</h6>
          
           <div class="text-center">
-          <!-- Aquí puedes agregar el botón u otro contenido que desees mantener o actualizar -->
+            <a href="https://api.whatsapp.com/send?phone=522224008171&text=Hola%2C%20me%20interesa%20comprar%20un%20boleto%20para%20el%20evento" target="_blank" class="btn btn-primary">Comprar por WhatsApp</a>
           </div>
         </div>
       </div>
@@ -596,6 +596,7 @@
   <!-- ... -->
 </section>
 <!-- End Buy Ticket Section -->
+
 >
   <footer id="footer">
   <div class="footer-top">
@@ -621,7 +622,7 @@
             Anillo Periférico Ecológico 3507 Torres Médicas Angelópolis,<br>
             72821 San Bernardino Tlaxcalancingo, Pue.<br>
             México <br>
-            <strong>Teléfono:</strong> +52 2222393453<br>
+            <strong>Teléfono:</strong> +52 2224008171<br>
             <strong>Email:</strong> mayerandreas3@gmail.com<br>
           </p>
           <div class="social-links">
