--- a/speaker-details.html
+++ b/speaker-details.html
@@ -49,7 +49,7 @@
 
         <nav id="navbar" class="navbar order-last order-lg-0">
          <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
+          <li><a class="nav-link scrollto active" href="http://beamsofwellness.com">Inicio</a></li>
           <li><a class="nav-link scrollto" href="#about">Acerca de</a></li>
           <li><a class="nav-link scrollto" href="#speakers">Ponentes</a></li>
           <li><a class="nav-link scrollto" href="#schedule">Programa</a></li>
