--- a/index.html
+++ b/index.html
@@ -495,105 +495,128 @@
   </div>
 </section>
 <!-- End Supporters Section -->
-<!-- Pregunta 1 -->
-<li>
-  <div data-bs-toggle="collapse" class="collapsed question" href="#faq7">¿Cuál es el propósito principal del evento "INTRODUCCIÓN AL LÁSER MÉDICO QUIRÚRGICO COMO DISCIPLINA INTEGRAL Y MULTIDISCIPLINARIA"? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-  <div id="faq7" class="collapse" data-bs-parent=".faq-list">
-    <p>
-      El propósito principal del evento "INTRODUCCIÓN AL LÁSER MÉDICO QUIRÚRGICO COMO DISCIPLINA INTEGRAL Y MULTIDISCIPLINARIA" es proporcionar una amplia comprensión de la aplicación de la tecnología láser en medicina, desde un punto de vista de reacciones a nivel celular en las diferentes áreas como dermatología hasta la oncología, con el fin de mejorar la práctica clínica y promover decisiones basadas en evidencia científica.
-    </p>
-  </div>
-</li>
+<!-- =======  F.A.Q Section ======= -->
+<section id="faq">
 
-<!-- Pregunta 2 -->
-<li>
-  <div data-bs-toggle="collapse" class="collapsed question" href="#faq8">¿Quiénes son los ponentes invitados y cuáles son sus áreas de especialización? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-  <div id="faq8" class="collapse" data-bs-parent=".faq-list">
-    <p>
-      Los ponentes invitados incluyen a especialistas reconocidos en el campo de la medicina láser, como la Dra. María Pilar Martín Santiago, el Dr. Pedro A. Martínez-Carpio, entre otros. Sus áreas de especialización abarcan desde la pediatría hasta la dermatocosmetica y cirugía, brindando una visión integral del uso del láser en diferentes disciplinas médicas.
-    </p>
-  </div>
-</li>
+  <div class="container" data-aos="fade-up">
 
-<!-- Pregunta 3 -->
-<li>
-  <div data-bs-toggle="collapse" class="collapsed question" href="#faq9">¿Qué temas específicos se cubrirán durante el curso? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-  <div id="faq9" class="collapse" data-bs-parent=".faq-list">
-    <p>
-      Durante el curso se abordarán temas como la física de la luz, la interacción de la luz y las células, técnicas y procedimientos médico-quirúrgicos, así como el uso del láser en intervenciones dermoestéticas, entre otros.
-    </p>
-  </div>
-</li>
+    <div class="section-header">
+      <h2>F.A.Q</h2>
+    </div>
 
-<!-- Pregunta 4 -->
-<li>
-  <div data-bs-toggle="collapse" class="collapsed question" href="#faq10">¿Necesito tener experiencia previa en medicina láser para asistir al evento? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-  <div id="faq10" class="collapse" data-bs-parent=".faq-list">
-    <p>
-      No es necesario tener experiencia previa en medicina láser para asistir al evento. El curso está diseñado para proporcionar una introducción comprensible a la tecnología láser en medicina, adecuada tanto para principiantes como para profesionales con experiencia.
-    </p>
-  </div>
-</li>
+    <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="100">
+      <div class="col-lg-9">
 
-<!-- Pregunta 5 -->
-<li>
-  <div data-bs-toggle="collapse" class="collapsed question" href="#faq11">¿Habrá oportunidades para interactuar con los ponentes y otros profesionales durante el evento? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-  <div id="faq11" class="collapse" data-bs-parent=".faq-list">
-    <p>
-      Sí, el evento ofrecerá oportunidades para interactuar con los ponentes y otros profesionales a través de sesiones de preguntas y respuestas, discusiones grupales y actividades prácticas. Estamos limitando el número de participantes para que los congresistas tengan respuestas a sus dudas e inquietudes.
-    </p>
-  </div>
-</li>
+        <ul class="faq-list">
 
-<!-- Pregunta 6 -->
-<li>
-  <div data-bs-toggle="collapse" class="collapsed question" href="#faq12">¿Se proporcionará material educativo o recursos adicionales a los participantes? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-  <div id="faq12" class="collapse" data-bs-parent=".faq-list">
-    <p>
-      Sí, se proporcionará material educativo y recursos adicionales a los participantes, incluyendo lecturas recomendadas y guías de estudio para prepararse para las sesiones prácticas, manuales con memorias de congreso.
-    </p>
-  </div>
-</li>
+          <!-- Pregunta 1 -->
+          <li>
+            <div data-bs-toggle="collapse" class="collapsed question" href="#faq1">¿Cuál es el propósito principal del evento "INTRODUCCIÓN AL LÁSER MÉDICO QUIRÚRGICO COMO DISCIPLINA INTEGRAL Y MULTIDISCIPLINARIA"? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div id="faq1" class="collapse" data-bs-parent=".faq-list">
+              <p>
+                El propósito principal del evento "INTRODUCCIÓN AL LÁSER MÉDICO QUIRÚRGICO COMO DISCIPLINA INTEGRAL Y MULTIDISCIPLINARIA" es proporcionar una amplia comprensión de la aplicación de la tecnología láser en medicina, desde un punto de vista de reacciones a nivel celular en las diferentes áreas como dermatología hasta la oncología, con el fin de mejorar la práctica clínica y promover decisiones basadas en evidencia científica.
+              </p>
+            </div>
+          </li>
 
-<!-- Pregunta 7 -->
-<li>
-  <div data-bs-toggle="collapse" class="collapsed question" href="#faq13">¿Cuál es la política de cancelación y reembolso en caso de no poder asistir al evento? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-  <div id="faq13" class="collapse" data-bs-parent=".faq-list">
-    <p>
-      La política de cancelación y reembolso se especificará en los términos y condiciones de registro del evento. Se recomienda revisar esta información al momento de inscribirse.
-    </p>
-  </div>
-</li>
+          <!-- Pregunta 2 -->
+          <li>
+            <div data-bs-toggle="collapse" class="collapsed question" href="#faq2">¿Quiénes son los ponentes invitados y cuáles son sus áreas de especialización? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div id="faq2" class="collapse" data-bs-parent=".faq-list">
+              <p>
+                Los ponentes invitados incluyen a especialistas reconocidos en el campo de la medicina láser, como la Dra. María Pilar Martín Santiago, el Dr. Pedro A. Martínez-Carpio, entre otros. Sus áreas de especialización abarcan desde la pediatría hasta la dermatocosmetica y cirugía, brindando una visión integral del uso del láser en diferentes disciplinas médicas.
+              </p>
+            </div>
+          </li>
 
-<!-- Pregunta 8 -->
-<li>
-  <div data-bs-toggle="collapse" class="collapsed question" href="#faq14">¿Cómo puedo acceder a la plataforma de videoconferencia para las sesiones virtuales del evento? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-  <div id="faq14" class="collapse" data-bs-parent=".faq-list">
-    <p>
-      Se proporcionarán instrucciones detalladas sobre cómo acceder a la plataforma de videoconferencia antes del inicio del evento. Los participantes recibirán esta información por correo electrónico.
-    </p>
-  </div>
-</li>
+          <!-- Pregunta 3 -->
+          <li>
+            <div data-bs-toggle="collapse" class="collapsed question" href="#faq3">¿Qué temas específicos se cubrirán durante el curso? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div id="faq3" class="collapse" data-bs-parent=".faq-list">
+              <p>
+                Durante el curso se abordarán temas como la física de la luz, la interacción de la luz y las células, técnicas y procedimientos médico-quirúrgicos, así como el uso del láser en intervenciones dermoestéticas, entre otros.
+              </p>
+            </div>
+          </li>
 
-<!-- Pregunta 9 -->
-<li>
-  <div data-bs-toggle="collapse" class="collapsed question" href="#faq15">¿Qué medidas de seguridad se implementarán para proteger la salud de los asistentes durante el evento presencial en el Hospital MAC Puebla? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-  <div id="faq15" class="collapse" data-bs-parent=".faq-list">
-    <p>
-      Se implementarán medidas de seguridad según las directrices y protocolos sanitarios vigentes en el momento del evento, incluyendo distanciamiento social, uso de mascarillas y desinfección frecuente de espacios comunes.
-    </p>
-  </div>
-</li>
+          <!-- Pregunta 4 -->
+          <li>
+            <div data-bs-toggle="collapse" class="collapsed question" href="#faq4">¿Necesito tener experiencia previa en medicina láser para asistir al evento? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div id="faq4" class="collapse" data-bs-parent=".faq-list">
+              <p>
+                No es necesario tener experiencia previa en medicina láser para asistir al evento. El curso está diseñado para proporcionar una introducción comprensible a la tecnología láser en medicina, adecuada tanto para principiantes como para profesionales con experiencia.
+              </p>
+            </div>
+          </li>
 
-<!-- Pregunta 10 -->
-<li>
-  <div data-bs-toggle="collapse" class="collapsed question" href="#faq16">¿Hay opciones de alojamiento recomendadas para los participantes que vienen de fuera de la ciudad? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
-  <div id="faq16" class="collapse" data-bs-parent=".faq-list">
-    <p>
-      Sí, se proporcionarán opciones de alojamiento recomendadas para los participantes que vienen de fuera de la ciudad. Se recomienda reservar con anticipación para garantizar disponibilidad y comodidad durante su estancia en Puebla.
-    </p>
+          <!-- Pregunta 5 -->
+          <li>
+            <div data-bs-toggle="collapse" class="collapsed question" href="#faq5">¿Habrá oportunidades para interactuar con los ponentes y otros profesionales durante el evento? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div id="faq5" class="collapse" data-bs-parent=".faq-list">
+              <p>
+                Sí, el evento ofrecerá oportunidades para interactuar con los ponentes y otros profesionales a través de sesiones de preguntas y respuestas, discusiones grupales y actividades prácticas. Estamos limitando el número de participantes para que los congresistas tengan respuestas a sus dudas e inquietudes.
+              </p>
+            </div>
+          </li>
+
+          <!-- Pregunta 6 -->
+          <li>
+            <div data-bs-toggle="collapse" class="collapsed question" href="#faq6">¿Se proporcionará material educativo o recursos adicionales a los participantes? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div id="faq6" class="collapse" data-bs-parent=".faq-list">
+              <p>
+                Sí, se proporcionará material educativo y recursos adicionales a los participantes, incluyendo lecturas recomendadas y guías de estudio para prepararse para las sesiones prácticas, manuales con memorias de congreso.
+              </p>
+            </div>
+          </li>
+
+          <!-- Pregunta 7 -->
+          <li>
+            <div data-bs-toggle="collapse" class="collapsed question" href="#faq7">¿Cuál es la política de cancelación y reembolso en caso de no poder asistir al evento? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div id="faq7" class="collapse" data-bs-parent=".faq-list">
+              <p>
+                La política de cancelación y reembolso se especificará en los términos y condiciones de registro del evento. Se recomienda revisar esta información al momento de inscribirse.
+              </p>
+            </div>
+          </li>
+
+          <!-- Pregunta 8 -->
+          <li>
+            <div data-bs-toggle="collapse" class="collapsed question" href="#faq8">¿Cómo puedo acceder a la plataforma de videoconferencia para las sesiones virtuales del evento? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div id="faq8" class="collapse" data-bs-parent=".faq-list">
+              <p>
+                Se proporcionarán instrucciones detalladas sobre cómo acceder a la plataforma de videoconferencia antes del inicio del evento. Los participantes recibirán esta información por correo electrónico.
+              </p>
+            </div>
+          </li>
+
+          <!-- Pregunta 9 -->
+          <li>
+            <div data-bs-toggle="collapse" class="collapsed question" href="#faq9">¿Qué medidas de seguridad se implementarán para proteger la salud de los asistentes durante el evento presencial en el Hospital MAC Puebla? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div id="faq9" class="collapse" data-bs-parent=".faq-list">
+              <p>
+                Se implementarán medidas de seguridad según las directrices y protocolos sanitarios vigentes en el momento del evento, incluyendo distanciamiento social, uso de mascarillas y desinfección frecuente de espacios comunes.
+              </p>
+            </div>
+          </li>
+
+          <!-- Pregunta 10 -->
+          <li>
+            <div data-bs-toggle="collapse" class="collapsed question" href="#faq10">¿Hay opciones de alojamiento recomendadas para los participantes que vienen de fuera de la ciudad? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
+            <div id="faq10" class="collapse" data-bs-parent=".faq-list">
+              <p>
+                Sí, se proporcionarán opciones de alojamiento recomendadas para los participantes que vienen de fuera de la ciudad. Se recomienda reservar con anticipación para garantizar disponibilidad y comodidad durante su estancia en Puebla.
+              </p>
+            </div>
+          </li>
+
+        </ul>
+
+      </div>
+    </div>
+
   </div>
-</li>
+
+</section><!-- End  F.A.Q Section -->
 
 <!-- ======= Buy Ticket Section ======= -->
 <section id="buy-tickets" class="section-with-bg">
