--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
           <h6 class="card-price text-center">Costo normal: $10,000</h6>
          
           <div class="text-center">
-            <a href="https://api.whatsapp.com/send?phone=522224008171&text=Hola%2C%20me%20interesa%20comprar%20un%20boleto%20para%20el%20evento" target="_blank" class="btn btn-primary">Comprar por WhatsApp</a>
+            <a href="https://api.whatsapp.com/send?phone=522224008171&text=Hola%2C%20me%20interesa%20asistir%20a%20el%20evento" target="_blank" class="btn btn-primary">Comprar por WhatsApp</a>
           </div>
         </div>
       </div>
