--- a/index.html
+++ b/index.html
@@ -84,26 +84,26 @@
 <main id="main">
 
 
-    <!-- ======= About Section ======= -->
- <section id="about">
-  <div class="container position-relative" data-aos="fade-up">
-    <div class="row">
-      <div class="col-lg-6">
-        <h2>Acerca del curso</h2>
-        <p>Este curso devela un amplio espectro de uso en la práctica diaria de diferentes sistemas de láser, desde la dermatología hasta la oncología, donde las ventajas de trabajo a nivel celular nos facilita cada momento de nuestro día a día, ayudándonos a tomar decisiones científicamente cimentadas.</p>
-        <p>En la investigación podremos adquirir la información para ser autocríticos en la extensa literatura que existe en esta área para poder seguir aumentando nuestro conocimiento.</p>
-      </div>
-      <div class="col-lg-3">
-        <h3>Dónde</h3>
-        <p>Hospital MAC Puebla</p>
-      </div>
-      <div class="col-lg-3">
-        <h3>Cuándo</h3>
-        <p>26 - 27 de Abril 2024</p>
+  <section id="about">
+    <div class="container position-relative" data-aos="fade-up">
+      <div class="row">
+        <div class="col-lg-6">
+          <h2 class="text-primary">Acerca del curso</h2>
+          <p>Este curso explora diversas aplicaciones de los láseres en la medicina, desde la dermatología hasta la oncología. Los láseres ofrecen ventajas a nivel celular, facilitando la práctica médica diaria y respaldando decisiones científicas.</p>
+          <p>Además, este curso te brinda la oportunidad de sumergirte en la investigación, adquiriendo información valiosa para estar al tanto de los avances en el campo de la medicina láser.</p>
+        </div>
+        <div class="col-lg-3">
+          <h3 class="text-primary">Dónde</h3>
+          <p>Hospital MAC Puebla</p>
+        </div>
+        <div class="col-lg-3">
+          <h3 class="text-primary">Cuándo</h3>
+          <p>26 - 27 de Abril 2024</p>
+        </div>
       </div>
     </div>
-  </div>
-</section><!-- End About Section -->
+  </section><!-- End About Section -->
+  
 
 
   
@@ -133,7 +133,7 @@
               <div class="speaker">
                   <img src="https://i.postimg.cc/30j7FD42/Pilar-Mart-n.png" alt="Dra. Pilar Martín" class="img-fluid">
                   <div class="details">
-                      <h3><a href="speaker-details.html">Dra. Pilar Martín</a></h3>
+                      <h3><a href="speaker-details.html"> Dra. María Pilar Martín Santiago</a></h3>
                       <p>Especializada en Ortodoncia y Odontología Cosmética</p>
                       <!-- Social Media Icons -->
                   </div>
@@ -282,7 +282,7 @@
   <div class="row schedule-item">
     <div class="col-md-2"><time>12:00 PM</time></div>
     <div class="col-md-10">
-      <h4>Prácticas preclínicas <span>Dra. Pilar Martín y Dra. Flor Arriaga</span></h4>
+      <h4>Prácticas preclínicas <span> Dra. María Pilar Martín Santiago y Dra. Flor Arriaga</span></h4>
       <p>Láseres terapéuticos (diodo) 560nm, 658nm, 660nm, 810nm, 940nm, 980nm.</p>
     </div>
   </div>
@@ -295,7 +295,7 @@
   <div class="row schedule-item">
     <div class="col-md-2"><time>02:30 PM</time></div>
     <div class="col-md-10">
-      <h4>Prácticas continuación <span>Dra. Pilar Martín y Dra. Flor Arriaga</span></h4>
+      <h4>Prácticas continuación <span> Dra. María Pilar Martín Santiago y Dra. Flor Arriaga</span></h4>
       <p>Láser Quirúrgicos (Erbio:YAG (2940nm, 1645nm), Er:Cr/YSGG (2780nm), CO2 (10,000nm).</p>
     </div>
   </div>
