--- a/index.html
+++ b/index.html
@@ -435,66 +435,72 @@
       </div>
 
     </section><!-- End Gallery Section -->
+
 <!-- ======= Supporters Section ======= -->
-<section id="supporters" class="section-with-bg">
-  <div class="container" data-aos="fade-up">
-    <div class="section-header">
-      <h2>Patrocinadores</h2>
-    </div>
+<html>
+  <head>
 
-    <div class="row no-gutters supporters-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
-      <div class="col-lg-3 col-md-4 col-xs-6">
-        <div class="supporter-logo">
-          <img src="https://i.postimg.cc/SKF1S35m/HMAC-logo.jpg" class="img-fluid" alt="">
+    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
+  </head>
+  <body>
+    <section id="supporters" class="section-with-bg">
+      <div class="container" data-aos="fade-up">
+        <div class="section-header">
+          <h2>Patrocinadores</h2>
         </div>
+        <div class="row no-gutters supporters-wrap clearfix"
+          data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo"> <img
+                src="https://i.postimg.cc/SKF1S35m/HMAC-logo.jpg"
+                class="img-fluid" alt="" height="314" width="411"> </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo"> <img
+                src="https://i.postimg.cc/BvTYXN9H/Logo-Investilaser.jpg"
+                class="img-fluid" alt="" height="370" width="417"> </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo"> <img
+                src="https://i.postimg.cc/wjsbdgwW/Logo-Nebrija.jpg"
+                class="img-fluid" alt="" height="235" width="509"> </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo"> <img
+                src="https://i.postimg.cc/yd7f99s5/Logo-Pilar-M.jpg"
+                class="img-fluid" alt="" height="120" width="501"> </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo"> <img
+                src="https://i.postimg.cc/QxCy0p1Z/dentadec-logo.png"
+                class="img-fluid" alt="" height="137" width="456"> </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo"> </div>
+          </div>
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <div class="col-lg-3 col-md-4 col-xs-6">
+                <div class="supporter-logo"> <img
+                    src="https://i.postimg.cc/QtSfqtMM/Screenshot-2024-01-18-015545.png"
+                    class="img-fluid" alt="" height="192" width="343"> </div>
+              </div>
+              <img
+                src="https://i.postimg.cc/WbyfKhwF/Diller-DIller-logo.jpg"
+                class="img-fluid" alt="" height="432" width="474"> </div>
+          </div>
+          <!-- Placeholder for additional sponsors if needed -->
+          <!-- <div class="col-lg-3 col-md-4 col-xs-6">
+          <div class="supporter-logo">
+            <img src="path/to/additional/sponsor.png" class="img-fluid" alt="">
+          </div>
+        </div> --> </div>
       </div>
+    </section>
+    <!-- End Supporters Section -->
+  </body>
+</html>
 
-      <div class="col-lg-3 col-md-4 col-xs-6">
-        <div class="supporter-logo">
-          <img src="https://i.postimg.cc/BvTYXN9H/Logo-Investilaser.jpg" class="img-fluid" alt="">
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4 col-xs-6">
-        <div class="supporter-logo">
-          <img src="https://i.postimg.cc/wjsbdgwW/Logo-Nebrija.jpg" class="img-fluid" alt="">
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4 col-xs-6">
-        <div class="supporter-logo">
-          <img src="https://i.postimg.cc/yd7f99s5/Logo-Pilar-M.jpg" class="img-fluid" alt="">
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4 col-xs-6">
-        <div class="supporter-logo">
-          <img src="https://i.postimg.cc/QxCy0p1Z/dentadec-logo.png" class="img-fluid" alt="">
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4 col-xs-6">
-        <div class="supporter-logo">
-          <img src="https://i.postimg.cc/QtSfqtMM/Screenshot-2024-01-18-015545.png" class="img-fluid" alt="">
-        </div>
-      </div>
-
-      <div class="col-lg-3 col-md-4 col-xs-6">
-        <div class="supporter-logo">
-          <img src="https://i.postimg.cc/WbyfKhwF/Diller-DIller-logo.jpg" class="img-fluid" alt="">
-        </div>
-      </div>
-
-      <!-- Placeholder for additional sponsors if needed -->
-      <!-- <div class="col-lg-3 col-md-4 col-xs-6">
-        <div class="supporter-logo">
-          <img src="path/to/additional/sponsor.png" class="img-fluid" alt="">
-        </div>
-      </div> -->
-    </div>
-  </div>
-</section>
-<!-- End Supporters Section -->
 <!-- =======  F.A.Q Section ======= -->
 <section id="faq">
 
