--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@
 <!-- ======= Supporters Section ======= -->
 <html>
   <head>
-
-    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
+    <meta http-equiv="content-type" content="text/html;
+      charset=windows-1252">
   </head>
   <body>
     <section id="supporters" class="section-with-bg">
@@ -453,12 +453,12 @@
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo"> <img
                 src="https://i.postimg.cc/SKF1S35m/HMAC-logo.jpg"
-                class="img-fluid" alt="" height="314" width="411"> </div>
+                class="img-fluid" alt="" height="264" width="411"> </div>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo"> <img
                 src="https://i.postimg.cc/BvTYXN9H/Logo-Investilaser.jpg"
-                class="img-fluid" alt="" height="370" width="417"> </div>
+                class="img-fluid" alt="" height="225" width="393"> </div>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo"> <img
@@ -473,7 +473,7 @@
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo"> <img
                 src="https://i.postimg.cc/QxCy0p1Z/dentadec-logo.png"
-                class="img-fluid" alt="" height="137" width="456"> </div>
+                class="img-fluid" alt="" height="137" width="533"> </div>
           </div>
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo"> </div>
@@ -483,11 +483,11 @@
               <div class="col-lg-3 col-md-4 col-xs-6">
                 <div class="supporter-logo"> <img
                     src="https://i.postimg.cc/QtSfqtMM/Screenshot-2024-01-18-015545.png"
-                    class="img-fluid" alt="" height="192" width="343"> </div>
+                    class="img-fluid" alt="" height="116" width="427"> </div>
               </div>
               <img
                 src="https://i.postimg.cc/WbyfKhwF/Diller-DIller-logo.jpg"
-                class="img-fluid" alt="" height="432" width="474"> </div>
+                class="img-fluid" alt="" height="215" width="473"> </div>
           </div>
           <!-- Placeholder for additional sponsors if needed -->
           <!-- <div class="col-lg-3 col-md-4 col-xs-6">
@@ -500,7 +500,6 @@
     <!-- End Supporters Section -->
   </body>
 </html>
-
 <!-- =======  F.A.Q Section ======= -->
 <section id="faq">
 
