--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
           <h6 class="card-price text-center">Costo normal: $10,000</h6>
          
           <div class="text-center">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScqjogiYEsfkAMJBdNpd1m489Nyw8oAOi89bOpAnDp12-jheg/viewform?embedded=true" target="_blank" class="btn btn-primary">Comprar por WhatsApp</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScqjogiYEsfkAMJBdNpd1m489Nyw8oAOi89bOpAnDp12-jheg/viewform?embedded=true" target="_blank" class="btn btn-primary">Asistir al evento</a>
           </div>
         </div>
       </div>
