--- a/index.html
+++ b/index.html
@@ -72,14 +72,15 @@
 <!-- ======= Hero Section ======= -->
 <section id="hero">
   <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
-    <h1 class="mb-4 pb-0">INTRODUCCIÓN AL LÁSER MÉDICO QUIRÚRGICO<span style="font-style: italic;"> como</span> disciplina integral y multidisciplinaria</h1>
-    <p class="mb-4 pb-0">Puebla, Hospital MAC</p>
-    <p class="mb-4 pb-0">26-27 DE ABRIL 2024</p>
-    <p class="mb-4 pb-0">Instructores: Dra. María Pilar Martín Santiago, Dr. Pedro A. Martínez-Carpio</p>
-    <p class="mb-4 pb-0">Organizadores: Dra. Flor Arriaga Lila, Dra. Maribel Sosa Nieves, Marc Cuellar Roehri, MSc.</p>
-    <a href="#about" class="about-btn scrollto">Acerca del evento</a>
+    <h1 class="mb-3 pb-0" style="font-size: 2rem;">Introducción al Láser Médico Quirúrgico<span style="font-style: italic;"> como</span> disciplina integral y multidisciplinaria</h1>
+    <p class="mb-2 pb-0" style="font-size: 1.2rem;">Puebla, Hospital MAC</p>
+    <p class="mb-2 pb-0" style="font-size: 1.2rem;">26-27 DE ABRIL 2024</p>
+    <p class="mb-3 pb-0" style="font-size: 1.2rem;">Instructores: Dra. María Pilar Martín Santiago, Dr. Pedro A. Martínez-Carpio</p>
+    <p class="mb-3 pb-0" style="font-size: 1.2rem;">Organizadores: Dra. Flor Arriaga Lila, Dra. Maribel Sosa Nieves, Marc Cuellar Roehri, MSc.</p>
+    <a href="#about" class="about-btn scrollto" style="font-size: 1.1rem;">Acerca del evento</a>
   </div>
 </section><!-- End Hero Section -->
+
 
 
 <main id="main">
