--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
 <!-- ======= Hero Section ======= -->
 <section id="hero">
   <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
-    <h1 class="mb-3 pb-0" style="font-size: 2rem;">Introducción al Láser Médico Quirúrgico<span style="font-style: italic;"> como</span> disciplina integral y multidisciplinaria</h1>
-    <p class="mb-2 pb-0" style="font-size: 1.2rem;">Puebla, Hospital MAC</p>
+   <h1 class="mb-3 pb-0" style="font-size: 1.5rem;">Introducción al Láser Médico Quirúrgico</h1>
+<h1 class="mb-3 pb-0" style="font-size: 1.5rem; font-style: italic;">como disciplina integral y multidisciplinaria</h1>
+   <p class="mb-2 pb-0" style="font-size: 1.2rem;">Puebla, Hospital MAC</p>
     
     <p class="mb-3 pb-0" style="font-size: 1.2rem;">Instructores: Dra. María Pilar Martín Santiago, Dr. Pedro A. Martínez-Carpio</p>
     
