--- a/index.html
+++ b/index.html
@@ -90,25 +90,26 @@
 <main id="main">
 
 
-  <section id="about">
-    <div class="container position-relative" data-aos="fade-up">
-      <div class="row">
-        <div class="col-lg-6">
-          <h2 class="text-primary">Acerca del curso</h2>
-          <p>Este curso explora diversas aplicaciones de los láseres en la medicina, desde la dermatología hasta la oncología. Los láseres ofrecen ventajas a nivel celular, facilitando la práctica médica diaria y respaldando decisiones científicas.</p>
-          <p>Además, este curso te brinda la oportunidad de sumergirte en la investigación, adquiriendo información valiosa para estar al tanto de los avances en el campo de la medicina láser.</p>
-        </div>
-        <div class="col-lg-3">
-          <h3 class="text-primary">Dónde</h3>
-          <p>Hospital MAC Puebla</p>
-        </div>
-        <div class="col-lg-3">
-          <h3 class="text-primary">Cuándo</h3>
-          <p>26 - 27 de Abril 2024</p>
-        </div>
+ <section id="about" style="background: url('https://i.ibb.co/mqW5cFL/image.png') no-repeat center center; background-size: cover;">
+  <div class="container position-relative" data-aos="fade-up">
+    <div class="row">
+      <div class="col-lg-6">
+        <h2 class="text-primary">Acerca del curso</h2>
+        <p>Este curso explora diversas aplicaciones de los láseres en la medicina, desde la dermatología hasta la oncología. Los láseres ofrecen ventajas a nivel celular, facilitando la práctica médica diaria y respaldando decisiones científicas.</p>
+        <p>Además, este curso te brinda la oportunidad de sumergirte en la investigación, adquiriendo información valiosa para estar al tanto de los avances en el campo de la medicina láser.</p>
+      </div>
+      <div class="col-lg-3">
+        <h3 class="text-primary">Dónde</h3>
+        <p>Hospital MAC Puebla</p>
+      </div>
+      <div class="col-lg-3">
+        <h3 class="text-primary">Cuándo</h3>
+        <p>26 - 27 de Abril 2024</p>
       </div>
     </div>
-  </section><!-- End About Section -->
+  </div>
+</section><!-- End About Section -->
+
   
 
 
