--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 <main id="main">
 
 
- <section id="about" style="background: url('https://i.ibb.co/mqW5cFL/image.png') no-repeat center center; background-size: cover;">
-  <div class="container position-relative" data-aos="fade-up">
+ <section id="about" style="background: url('https://i.ibb.co/mqW5cFL/image.png') center center / cover no-repeat; background-attachment: fixed;">
+  <div class="container position-relative" data-aos="fade-up" style="background: rgba(0, 0, 0, 0.5); padding: 20px; border-radius: 10px;">
     <div class="row">
       <div class="col-lg-6">
         <h2 class="text-primary">Acerca del curso</h2>
