--- a/index.html
+++ b/index.html
@@ -89,22 +89,17 @@
 
 <main id="main">
 
-
- <section id="about" style="background: url('https://i.ibb.co/mqW5cFL/image.png') center center / cover no-repeat; background-attachment: fixed;">
-  <div class="container position-relative" data-aos="fade-up" style="background: rgba(0, 0, 0, 0.5); padding: 20px; border-radius: 10px;">
+<section id="about" style="background: url('https://i.ibb.co/mqW5cFL/image.png') right center / cover no-repeat; background-attachment: fixed;">
+  <div class="container position-relative" data-aos="fade-up" style="background: rgba(0, 0, 0, 0.7); padding: 20px; border-radius: 10px; max-width: 50%;">
     <div class="row">
-      <div class="col-lg-6">
-        <h2 class="text-primary">Acerca del curso</h2>
-        <p>Este curso explora diversas aplicaciones de los láseres en la medicina, desde la dermatología hasta la oncología. Los láseres ofrecen ventajas a nivel celular, facilitando la práctica médica diaria y respaldando decisiones científicas.</p>
-        <p>Además, este curso te brinda la oportunidad de sumergirte en la investigación, adquiriendo información valiosa para estar al tanto de los avances en el campo de la medicina láser.</p>
-      </div>
-      <div class="col-lg-3">
-        <h3 class="text-primary">Dónde</h3>
-        <p>Hospital MAC Puebla</p>
-      </div>
-      <div class="col-lg-3">
-        <h3 class="text-primary">Cuándo</h3>
-        <p>26 - 27 de Abril 2024</p>
+      <div class="col-lg-12">
+        <h2 style="color: white;">Acerca del curso</h2>
+        <p style="color: white;">Este curso explora diversas aplicaciones de los láseres en la medicina, desde la dermatología hasta la oncología. Los láseres ofrecen ventajas a nivel celular, facilitando la práctica médica diaria y respaldando decisiones científicas.</p>
+        <p style="color: white;">Además, este curso te brinda la oportunidad de sumergirte en la investigación, adquiriendo información valiosa para estar al tanto de los avances en el campo de la medicina láser.</p>
+        <h3 style="color: white;">Dónde</h3>
+        <p style="color: white;">Hospital MAC Puebla</p>
+        <h3 style="color: white;">Cuándo</h3>
+        <p style="color: white;">26 - 27 de Abril 2024</p>
       </div>
     </div>
   </div>
