--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <main id="main">
 
 <!-- ======= About Section ======= -->
-<section id="about" style="background: url('https://i.ibb.co/mqW5cFL/image.png') right top / auto 100% no-repeat; background-attachment: scroll;">
+<section id="about" style="background: url('https://i.ibb.co/BzH6R73/image.png') center center / cover no-repeat;">
   <div class="container position-relative" data-aos="fade-up" style="background: rgba(0, 0, 0, 0.7); padding: 20px; border-radius: 10px;">
     <div class="row">
       <div class="col-lg-6">
@@ -109,6 +109,7 @@
     </div>
   </div>
 </section><!-- End About Section -->
+
 
 
   
