--- a/index.html
+++ b/index.html
@@ -90,29 +90,21 @@
 <main id="main">
 
 <!-- ======= About Section ======= -->
-<section id="about" style="background: url('https://i.ibb.co/BzH6R73/image.png') center center / cover no-repeat;">
-  <div class="container position-relative" data-aos="fade-up" style="background: rgba(0, 0, 0, 0.7); padding: 20px; border-radius: 10px;">
+<section id="about" style="background: url('https://i.ibb.co/BzH6R73/image.png') no-repeat right center; background-size: cover; background-attachment: fixed;">
+  <div class="container position-relative" data-aos="fade-up" style="background: rgba(0, 0, 0, 0.7); padding: 20px; border-radius: 10px; max-width: 50%;">
     <div class="row">
-      <div class="col-lg-6">
+      <div class="col-lg-12">
         <h2 style="color: white;">Acerca del curso</h2>
         <p style="color: white;">Este curso explora diversas aplicaciones de los láseres en la medicina, desde la dermatología hasta la oncología. Los láseres ofrecen ventajas a nivel celular, facilitando la práctica médica diaria y respaldando decisiones científicas.</p>
         <p style="color: white;">Además, este curso te brinda la oportunidad de sumergirte en la investigación, adquiriendo información valiosa para estar al tanto de los avances en el campo de la medicina láser.</p>
-      </div>
-      <div class="col-lg-3">
         <h3 style="color: white;">Dónde</h3>
         <p style="color: white;">Hospital MAC Puebla</p>
-      </div>
-      <div class="col-lg-3">
         <h3 style="color: white;">Cuándo</h3>
         <p style="color: white;">26 - 27 de Abril 2024</p>
       </div>
     </div>
   </div>
 </section><!-- End About Section -->
-
-
-
-  
 
 
   
