--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 <main id="main">
 
 <!-- ======= About Section ======= -->
-<section id="about" style="background: url('https://i.ibb.co/BzH6R73/image.png') no-repeat right center; background-size: cover; background-attachment: fixed;">
-  <div class="container position-relative" data-aos="fade-up" style="background: rgba(0, 0, 0, 0.7); padding: 20px; border-radius: 10px; max-width: 50%;">
+<section id="about" style="background: url('https://i.ibb.co/BzH6R73/image.png') no-repeat center center / cover; background-attachment: fixed;">
+  <div class="container position-relative" data-aos="fade-up" style="background: rgba(0, 0, 0, 0.8); margin-top: 100px; padding: 20px; border-radius: 10px;">
     <div class="row">
       <div class="col-lg-12">
         <h2 style="color: white;">Acerca del curso</h2>
