--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
 <main id="main">
 
 <!-- ======= About Section ======= -->
-<section id="about" style="background: url('https://i.ibb.co/BzH6R73/image.png') no-repeat center center / cover; background-attachment: fixed;">
-  <div class="container position-relative" data-aos="fade-up" style="background: rgba(0, 0, 0, 0.8); margin-top: 100px; padding: 20px; border-radius: 10px;">
-    <div class="row">
-      <div class="col-lg-12">
+<section id="about" style="position: relative; overflow: hidden;">
+  <img src="https://i.ibb.co/BzH6R73/image.png" style="width: 100%; height: auto; position: absolute; top: 0; left: 0; z-index: -1;">
+  <div class="container position-relative" data-aos="fade-up" style="z-index: 2; padding-top: 50px; padding-bottom: 50px;">
+    <div class="row justify-content-end">
+      <div class="col-lg-8" style="background: rgba(0, 0, 0, 0.8); padding: 20px; border-radius: 10px;">
         <h2 style="color: white;">Acerca del curso</h2>
         <p style="color: white;">Este curso explora diversas aplicaciones de los láseres en la medicina, desde la dermatología hasta la oncología. Los láseres ofrecen ventajas a nivel celular, facilitando la práctica médica diaria y respaldando decisiones científicas.</p>
         <p style="color: white;">Además, este curso te brinda la oportunidad de sumergirte en la investigación, adquiriendo información valiosa para estar al tanto de los avances en el campo de la medicina láser.</p>
