--- a/index.html
+++ b/index.html
@@ -90,10 +90,13 @@
 <main id="main">
 
 <!-- ======= About Section ======= -->
-<section id="about" style="position: relative; overflow: hidden;">
-  <img src="https://i.ibb.co/BzH6R73/image.png" style="width: 100%; height: auto; position: absolute; top: 0; left: 0; z-index: -1;">
-  <div class="container position-relative" data-aos="fade-up" style="z-index: 2; padding-top: 50px; padding-bottom: 50px;">
-    <div class="row justify-content-end">
+<section id="about" style="overflow: hidden;">
+  <div class="container position-relative" data-aos="fade-up" style="padding-top: 50px; padding-bottom: 50px;">
+    <div class="row justify-content-center">
+      <div class="col-lg-8 text-center" style="margin-bottom: 30px;">
+        <!-- Aquí insertamos la imagen para que se muestre completa arriba del texto -->
+        <img src="https://i.ibb.co/BzH6R73/image.png" style="width: 100%; height: auto; max-width: 600px; margin: auto;">
+      </div>
       <div class="col-lg-8" style="background: rgba(0, 0, 0, 0.8); padding: 20px; border-radius: 10px;">
         <h2 style="color: white;">Acerca del curso</h2>
         <p style="color: white;">Este curso explora diversas aplicaciones de los láseres en la medicina, desde la dermatología hasta la oncología. Los láseres ofrecen ventajas a nivel celular, facilitando la práctica médica diaria y respaldando decisiones científicas.</p>
@@ -106,6 +109,7 @@
     </div>
   </div>
 </section><!-- End About Section -->
+
 
 
   
